Verstappen Website 90 percent

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<h2>Two Future World Champions </h2>
 			</div>
 			<div class="col-lg-3 col-md-6 col-12" align="center" >
-				<a href="maxverstappen.html">
+				<a href="maxverstappen.html" target="_blank">
 			    <img class="img-fluid character" src="https://www.formula1.com/content/fom-website/en/drivers/max-verstappen/_jcr_content/image.img.640.medium.jpg/1584012927837.jpg" alt="Max Verstappen" width="300" height="300">
 			    <p class="driverdescription"><b>Verstappen</b></p>
 				</a>
