--- a/maxverstappen.html
+++ b/maxverstappen.html
@@ -3,11 +3,36 @@
 <head>
 <meta charset="utf-8">
 <title>Max Verstappen</title>
-<link href="css/styles.css" rel="stylesheet" type="text/css">
+<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" >	
+	<link href="css/styles.css" rel="stylesheet" type="text/css">
+<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
 </head>
 
 <body>
-</body>
+<div class="container-fluid" id="header">
+	<div class="row">
+		<h1><b>Max Verstappen</b></h1>
+			<div class="btn-group" role="group">
+	    		<button type="button" class="btn btn-secondary"><a href="https://www.scuderiaalphatauri.com/en/" target="_blank"> Torro Rosso Website</a></button> 
+	    		<button type="button" class="btn btn-secondary"><a href="https://www.verstappen.nl/" target="_blank">Official Verstappen Website</a></button>
+	    		<button type="button" class="btn btn-secondary"><a href="https://www.redbull.com/int-en/redbullracing/" target="_blank">Red Bull Racing Website</a></button>
+			</div>
+	</div>
+</div>
+<div class="row" id="columntext">
+  <div class="col-xl-4" align="center">Max Verstappen's incredible start</div>
+  <div class="col-xl-4" align="center">Max's Controversial Style</div>
+  <div class="col-xl-4" align="center">Max and Charles' Rivalry</div>
+</div>
+<div class="row" id="maxpic">
+<div class= "col-xl-4 character" align="center"> <a href="https://www.youtube.com/watch?v=Rakb_CWfGYc&t=4s" target="_blank"> <img src="https://www.formule1.nl/app/uploads/2014/08/max-1500x998.jpg" alt="Placeholder image" width="500" class="img-fluid img-thumbnail"></a></div>
+  <div class= "col-xl-4 character" align="center"> <a href="https://www.youtube.com/watch?v=lkAoSghdD6Y" target="_blank"> <img src="https://cdn-1.motorsport.com/images/amp/YN3NvV36/s6/f1-singapore-gp-2017-max-verstappen-red-bull-racing-rb13-fernando-alonso-mclaren-mcl32-hon-5589196.jpg" alt="Placeholder image" width="500" height="0" class="img-fluid img-thumbnail" > </a> </div>
+  <div class= "col-xl-4 character" align="center"> <a href="https://www.youtube.com/watch?v=RmvZyC6s_Wk" target="_blank"><img src="https://d2d0b2rxqzh1q5.cloudfront.net/sv/1.67/dir/663/image/663a6cf7cee56ca6e001f9fc5421372a.jpg" alt="Placeholder image" width="500" class="img-fluid img-thumbnail" > </a> </div>
+</div>
+	</body>
 </html>
 
 <script src="js/jquery-3.4.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"></script>
