--- a/maxverstappen.html
+++ b/maxverstappen.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>Max Verstappen</title>		
-	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" >	
-	<link href="css/styles.css" rel="stylesheet" type="text/css">
-<!-- Required meta tags -->
+	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
+	<!-- Bootstrap CSS -->
+	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" >	
+	<link href="css/styles.css" rel="stylesheet" type="text/css">
+
+
 </head>
 
 <body>
@@ -31,22 +33,33 @@
 			</div>
   </div>
 </div>
-<div class="row" id="columntext">
-  <div class="col-xl-4" align="center">Max Verstappen's incredible start</div>
-  <div class="col-xl-4" align="center">Max's Controversial Style</div>
-  <div class="col-xl-4" align="center">Max and Charles' Rivalry</div>
+<div class="container-fluid" id="columntext"> 
+<div class="row">
+  <div class="col-sm-4" align="center">Max Verstappen's incredible start</div>
+  <div class="col-sm-4" align="center">Max's Controversial Style</div>
+  <div class="col-sm-4" align="center">Max and Charles' Rivalry</div>
 </div>
-<div class="row" id="maxpic">
-	<div class= "col-xl-4 character" align="center"> <a href="https://www.youtube.com/watch?v=Rakb_CWfGYc&t=4s" target="_blank"> <img src="https://www.formule1.nl/app/uploads/2014/08/max-1500x998.jpg" alt="Placeholder image" width="500" class="img-fluid img-thumbnail"></a>
 	</div>
-  <div class= "col-xl-4 character" align="center"> <a href="https://www.youtube.com/watch?v=lkAoSghdD6Y" target="_blank"> <img src="https://cdn-1.motorsport.com/images/amp/YN3NvV36/s6/f1-singapore-gp-2017-max-verstappen-red-bull-racing-rb13-fernando-alonso-mclaren-mcl32-hon-5589196.jpg" alt="Placeholder image" width="500" height="0" class="img-fluid img-thumbnail" > </a> 
-  </div>
-  <div class= "col-xl-4 character" align="center"> <a href="https://www.youtube.com/watch?v=RmvZyC6s_Wk" target="_blank"><img src="https://d2d0b2rxqzh1q5.cloudfront.net/sv/1.67/dir/663/image/663a6cf7cee56ca6e001f9fc5421372a.jpg" alt="Placeholder image" width="500" class="img-fluid img-thumbnail" > </a> 
-  </div>
+<div class="row">
+
+<div class="col-lg-4 col-md-4 col-xs-4 thumb character" align="center">
+    <a class="thumbnail" href="https://www.youtube.com/watch?v=Rakb_CWfGYc&t=4s" target="_blank">
+        <img class="img-responsive img-fluid" src="https://www.formule1.nl/app/uploads/2014/08/max-1500x998.jpg" alt="Verstappen Torro Rosso" width="500">
+    </a>
 </div>
+<div class="col-lg-4 col-md-4 col-xs-4 thumb character" align="center">
+    <a class="thumbnail" href="https://www.youtube.com/watch?v=lkAoSghdD6Y" target="_blank">
+        <img class="img-responsive img-fluid" src="https://cdn-1.motorsport.com/images/amp/YN3NvV36/s6/f1-singapore-gp-2017-max-verstappen-red-bull-racing-rb13-fernando-alonso-mclaren-mcl32-hon-5589196.jpg" alt="Verstappen crash" width="500">
+    </a>
+</div>
+<div class="col-lg-4 col-md-4 col-xs-4 thumb character" align="center" >
+    <a class="thumbnail" href="https://www.youtube.com/watch?v=RmvZyC6s_Wk" target="_blank">
+        <img class="img-responsive img-fluid" src="https://d2d0b2rxqzh1q5.cloudfront.net/sv/1.67/dir/663/image/663a6cf7cee56ca6e001f9fc5421372a.jpg" alt="Verstappen And Leclerc" width="500">
+    </a>
+</div>
+	</div>
 </body>
+<script src="js/jquery-3.5.0.slim.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 </html>
 
-<script src="js/jquery-3.4.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"></script>
-<script src="js/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"></script>
-<script src="js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" ></script>
