--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Formula 1</title>
-	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" >	
-	<link href="css/styles.css" rel="stylesheet" type="text/css">
-<!-- Required meta tags -->
+	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
+	<!-- Bootstrap CSS -->
+	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" >	
+	<link href="css/styles.css" rel="stylesheet" type="text/css">
+    
 </head>
 
 <body>
@@ -56,9 +57,8 @@
 	  <p class="footertext"><b>Created by Sam Prinsen, 162369, Class 3</b></p>
 	  <p class="footertext2">&nbsp;</p>
 	</footer>
-	
-<script src="js/jquery-3.4.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"></script>
-<script src="js/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"></script>
-<script src="js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" ></script>	
+
 </body>
+<script src="js/jquery-3.5.0.slim.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 </html>
