Final Hand-in Version

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	</div>
 	<div class="container-fluid">
  		<div class="row">
-			<div class="col-lg-3 col-md-6 col-12" align="center"> 
-				<p><b id="ytlogotext">Or visit F1's official Youtube Channel!</b></p>
+			<div class="col-lg-3 col-md-6 col-12" id="ytlogotext"> 
+				<p><b>Or visit F1's official Youtube Channel!</b></p>
 				<a href="https://www.youtube.com/formula1/" target="_blank"> <img src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/395_Youtube_logo-512.png" alt="YT logo" width="200">
 			    </a>
        		 </div>
