--- a/maxverstappen.html
+++ b/maxverstappen.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
 	<title>Max Verstappen</title>		
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -15,7 +14,7 @@
 
 <body>
 	<div class="container-fluid back">
-		<div class="row" align="left">
+		<div class="row">
 			<div class="col-lg-1 col-md-2 col-3">
 				<a href="index.html">
 				<p class=" leftarrow text-center"><strong>&lt;</strong></p>
@@ -23,36 +22,35 @@
 			</div>	
   	    </div>
 	</div>
-<div class="container-fluid" id="header">
+<div class="container" id="header">
 	<div class="row">
 		<h1><b>Max Verstappen</b></h1>
-			<div class="btn-group" role="group">
-	    		<button type="button" class="btn btn-link"><a href="https://www.scuderiaalphatauri.com/en/" target="_blank"> Torro Rosso Website</a></button> 
-	    		<button type="button" class="btn btn-link"><a href="https://www.verstappen.nl/" target="_blank">Official Verstappen Website</a></button>
-	    		<button type="button" class="btn btn-link"><a href="https://www.redbull.com/int-en/redbullracing/" target="_blank">Red Bull Racing Website</a></button>
+		<a class="button col-4" href="https://www.scuderiaalphatauri.com/en/" target="_blank"> Torro Rosso</a>
+		<a class="button2 col-4" href="https://www.verstappen.nl/" target="_blank">Official Verstappen Website</a>
+		<a class="button3 col-4" href="https://www.redbull.com/int-en/redbullracing/" target="_blank"> Red Bull Racing Website</a>
 			</div>
   </div>
-</div>
+
 <div class="container-fluid" id="columntext"> 
 <div class="row">
-  <div class="col-sm-4" align="center">Max Verstappen's incredible start</div>
-  <div class="col-sm-4" align="center">Max's Controversial Style</div>
-  <div class="col-sm-4" align="center">Max and Charles' Rivalry</div>
+  <div class="col-sm-4">Max Verstappen's incredible start</div>
+  <div class="col-sm-4">Max's Controversial Style</div>
+  <div class="col-sm-4">Max and Charles' Rivalry</div>
 </div>
 	</div>
 <div class="row">
 
-<div class="col-lg-4 col-md-4 col-xs-4 thumb character" align="center">
+<div class="col-lg-4 col-md-4 col-xs-4 thumb character">
     <a class="thumbnail" href="https://www.youtube.com/watch?v=Rakb_CWfGYc&t=4s" target="_blank">
         <img class="img-responsive img-fluid" src="https://www.formule1.nl/app/uploads/2014/08/max-1500x998.jpg" alt="Verstappen Torro Rosso" width="500">
     </a>
 </div>
-<div class="col-lg-4 col-md-4 col-xs-4 thumb character" align="center">
+<div class="col-lg-4 col-md-4 col-xs-4 thumb character">
     <a class="thumbnail" href="https://www.youtube.com/watch?v=lkAoSghdD6Y" target="_blank">
         <img class="img-responsive img-fluid" src="https://cdn-1.motorsport.com/images/amp/YN3NvV36/s6/f1-singapore-gp-2017-max-verstappen-red-bull-racing-rb13-fernando-alonso-mclaren-mcl32-hon-5589196.jpg" alt="Verstappen crash" width="500">
     </a>
 </div>
-<div class="col-lg-4 col-md-4 col-xs-4 thumb character" align="center" >
+<div class="col-lg-4 col-md-4 col-xs-4 thumb character">
     <a class="thumbnail" href="https://www.youtube.com/watch?v=RmvZyC6s_Wk" target="_blank">
         <img class="img-responsive img-fluid" src="https://d2d0b2rxqzh1q5.cloudfront.net/sv/1.67/dir/663/image/663a6cf7cee56ca6e001f9fc5421372a.jpg" alt="Verstappen And Leclerc" width="500">
     </a>
